Fix visibility of output file

--- a/src/app/layouts/header/export-popup/export-popup.component.css
+++ b/src/app/layouts/header/export-popup/export-popup.component.css
@@ -8,6 +8,10 @@
     margin-top: 20px;
 }
 
+.editor-item.hidden {
+    display: none;
+}
+
 .editor-item label {
     width: 200px;
 }
